--- a/src/static/djgap/css/main.css
+++ b/src/static/djgap/css/main.css
@@ -18,7 +18,7 @@ html, body {
 	background: #fff;
     border-radius: 3px;
     border: 1px solid #ccc;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+    box-shadow: 1px 4px 15px 1px rgba(0, 0, 0, .25);
 	
 }
 
